fix(LLM): fixing broken tests